fix: make things visible

--- a/css/store.css
+++ b/css/store.css
@@ -45,7 +45,7 @@
     justify-content: space-between;
     width: 100%;
     height: 80px;
-    background: #fff url(/DoctorShoe/img/checkout/logo.svg) center center no-repeat;
+    background: #fff url(/DoctorShoe/favicon.png) center center no-repeat;
     border-bottom: 1px solid #f3f3ff;
   }
   
@@ -75,8 +75,8 @@
     max-width: 480px;
     margin: 0 auto;
     padding: 30px 0;
-    visibility: hidden;
-    opacity: 0;
+    visibility: visible;
+    opacity: 1;
     transition: visibility 0s, opacity 0.5s linear 0.5s;
   }
   
@@ -111,7 +111,7 @@
   
   #payment-request {
     visibility: hidden;
-    opacity: 0;
+    opacity: 1;
     min-height: 100px;
     padding: 20px 0;
     transition: visibility 0s, opacity 0.3s ease-in;
